# saitama

./: .gitignore  Cargo.toml  README.md  build.rs
completions/: _saitama  saitama.bash
src/: lib.rs  main.rs
src/args/: args.rs  mod.rs
src/commands/: mod.rs  punch.rs
src/impls/: constant_rate_orchestrator.rs  generic_worker.rs  http_config.rs  http_worker.rs  mod.rs  term_output_handler.rs
src/model/: http_config.rs  mod.rs  request_record.rs
src/orchestrator/: constant_http_orchestrator.rs  mod.rs  orchestrator.rs
src/output/: mod.rs  output.rs  term_output_handler.rs
src/punch/: mod.rs  orchestrator.rs  output_handler.rs  punch.rs  request_record.rs  worker.rs
src/runner/: runner.rs
src/traits/: config.rs  mod.rs  orchestrator.rs  output.rs  worker.rs
src/util/: channel.rs  mod.rs
src/worker/: http_worker.rs  mod.rs  worker.rs
