[package]
name = "saitama"
version = "0.0.4"
edition = "2021"
description = "Load testing framework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
chrono = "0.4.19"
serde = "1.0.136"
log = "0.4.16"
simplelog = "0.11.2"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
