[package]
name = "saitama"
version = "0.0.6"
edition = "2021"
description = "Load testing framework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = { version = "1.12.0", features = ["chrono"] }
log = "0.4.16"
simplelog = "0.11.2"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
mckernant1-tools = { version = "0.0.3", features = ["channels"] }
