[package]
name = "saitama"
version = "0.0.8"
edition = "2021"
description = "Load testing framework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = { version = "1.14.0", features = ["chrono"] }
log = "0.4.17"
simplelog = "0.12.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
mckernant1-tools = { version = "0.0.5", features = ["channels"] }
